# muck

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  HANDOFF_STORAGE_OPTIMIZATION.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: benchmark.yml  docker-publish.yml
bench/: README.md  ZOEKT_SETUP.md  corpora.json  lib.sh  queries.json  run.sh  run_ag.sh  run_muck.sh  run_ripgrep.sh  run_zoekt.sh  summarize.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_globfilter.rs  fuzz_trigram_index.rs
scripts/: index-github-repo.sh
src/: alloc_trim.rs  globfilter.rs  handlers.rs  lib.rs  main.rs  models.rs  persist.rs  search.rs  shard.rs  store.rs  trigram.rs
tests/: concurrent_build.rs  persistence_restart.rs  shard_store.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  AppContext.tsx  api.ts  main.tsx  pierreSetup.ts  router.tsx  styles.css  usePierreTheme.ts
ui/src/components/: ResultCard.tsx
ui/src/lib/: highlightSnippet.ts  linkTemplate.ts  pierreFile.ts  pierreTreeIcons.ts
ui/src/routes/: BrowsePage.tsx  RootLayout.tsx  SearchPage.tsx
