[package]
name = "muck"
version = "0.2.0"
edition = "2021"

[lib]
name = "muck"
path = "src/lib.rs"

[[bin]]
name = "muck"
path = "src/main.rs"

[[bin]]
name = "muck-local"
path = "src/bin/local.rs"
required-features = ["embed-ui"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = { version = "1", features = ["serde"] }
regex = "1"
glob = "0.3"
bincode = "1"
memmap2 = "0.9"
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[features]
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[profile.release]
opt-level = 2
