[package]
name = "muck-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
muck = { path = ".." }

# Prevent this from interfering with the parent workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_trigram_index"
path = "fuzz_targets/fuzz_trigram_index.rs"
doc = false

[[bin]]
name = "fuzz_globfilter"
path = "fuzz_targets/fuzz_globfilter.rs"
doc = false
